--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,10 @@
 {
     "name": "laravel/laravel",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "Apito - Backend.",
+    "versionn": "0.1.0.",
     "keywords": ["framework", "laravel"],
-    "license": "MIT",
+    "license": "GPL-3.0-or-later",
     "require": {
         "php": "^8.0.2",
         "guzzlehttp/guzzle": "^7.2",
