--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,8 @@
 # Set container runner {podman,docker,nerdctl}
 export RUNNER=podman
 
+export PORT=5000
+
 # LOAD ENVIRONMENT VARIABLES
 [[ -f $PWD/.env ]] && eval $(cat .env | grep 'DB_' | sed 's/^/export /')
 
