--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "license": "GPL-3.0-or-later",
     "require": {
         "php": "^8.0.2",
+        "doctrine/dbal": "^3.6",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
